gcc/testsuite/algol68/compile/error-nest-4.a68
begin string s =
         nest C "lala"; { dg-error "" }
      union(int,real) x =
         nest C "x"; { dg-error "" }
      proc(union(void,string))bool y =
         nest C "y"; { dg-error "" }
      skip
end
